#9 Fix thread spine alignment
Also speculative fix for channels jiggling in some rare cases

--- a/src/modules/main/channels/_channels.scss
+++ b/src/modules/main/channels/_channels.scss
@@ -56,15 +56,15 @@
 // Category
 .containerDefault-3TQ5YN{
     .wrapper-1S43wv{
-        height: 34px;
         margin: 0 0 0 8px;
         padding-left: 10px;
         border: 1px solid transparent;
         border-radius: 4px;
         color: $TextFillColorPrimary;
         &:hover{
-            background-color: $SubtleFillColorSecondary;
-            border-color: $SubtleFillColorSecondary;
+            .name-3BUDLf{
+                color: $TextFillColorSecondary;
+            }
         }
 
         // Wrapper types
@@ -119,10 +119,6 @@
     }
 
     .wrapper-NhbLHG{
-        .content-1gYQeQ{
-            border: 1px outset transparent;
-        }
-
         // Channel name
         .name-28HaxV{
             color: $TextFillColorSecondary;
@@ -137,7 +133,7 @@
         &:hover{
             .content-1gYQeQ{
                 background-color: $SubtleFillColorSecondary;
-                border-color: $SubtleFillColorSecondary;
+                box-shadow: inset 0 0 0 1px $SubtleFillColorSecondary; // Using box-shadow because borders cause the div to grow
             }
 
             // Reveal channel buttons
@@ -213,5 +209,5 @@
 // Threads
 // Channel tree spine
 .spine-29OFwR{
-    left: 32px;
+    left: 40px;
 }
